# ShopOnline

./: .coverage  .gitignore  BUGS.md  FEATURES_TO_ADD.md  Procfile  README.md  db.sqlite3  manage.py  pushing_remote  pyproject.toml  references.md  render.yaml  requirements.txt  to_add_features.md
.github/workflows/: deploy-to-heroku.yml
ShopOnline/: asgi.py  settings.py  wsgi.py
app/: admin.py  context_processors.py  custom_logger.py  forms.py  invoice.py  models.py  sitemaps.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_alter_product_category.py  0004_rename_locality_customer_locality_address_and_more.py  0005_alter_customer_phone.py  0006_alter_customer_phone_alter_customer_zipcode.py  0007_orderplaced_txn_id_alter_product_category.py  0008_product_stock.py  0009_alter_product_stock.py  0010_product_slug.py  0011_remove_product_slug.py  0012_orderplaced_invoice.py  0013_orderplaced_order_id.py  0014_order_orderdetail.py  0015_orderdetail_invoice_id_alter_order_order_id.py  0016_delete_orderplaced.py  0017_alter_customer_phone.py
app/templates/app/: address.html  addtocart.html  base-old.html  ram.html  (+24 more)
app/tests/: create_objects.py  test_cart.py  test_customer.py  test_order.py  test_orderplaced.py  test_product.py
media/productimg/: HDD1.jfif  HDD2.jfif  PSU1.jfif  PSU2.jfif  RAM1.jfif  RAM2.jfif  SSD1.jfif  SSD2.jfif  UPS1.jfif  UPS2.jfif  cabinet2.jfif  keyboard1.jfif  keyboard2.jfif  motherboard1.jfif  motherboard2.jfif  mouse1.jfif  mouse2.jfif  pendrive1.jfif  pendrive2.jfif  pendrive3.jfif  pendrive4.jfif
(+29 files in other folders)
