[tool.poetry]
name = "ShopOnline"
version = "0.1.0"
description = ""
authors = ["Charitra Agarwal <charitraagarwal1022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = "^6.5.0"
gunicorn = "^21.2.0"
django-cors-headers = "^4.2.0"
pillow = "^10.0.0"
pyinvoice = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
